--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bento</title>
-    <link rel=" shortcut icon" type="image/png" href="icons/favicon.png" />
+    <title>StartPage</title>
+    <link rel=" shortcut icon" type="image/png" href="icons/favicon.ico" />
 
     <link rel="stylesheet" href="css/style.css" />
 
